--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
           tipClass: 'Bootstrap',
           tipOptions:{ showEffect: 'slidein' }
         });
-        // tour.start();
+        tour.start();
 
       </script>
   </body>
